<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvView1"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/diner_name"
            android:textStyle="bold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints="Please enter full name"
            android:ems="10"
            android:hint="@string/hintName"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvView2"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/mobileNumber"
            android:textStyle="bold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputMobileNo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints="Please enter mobile number"
            android:ems="10"
            android:hint="@string/hintNumber"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvView3"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/noOfPax"
            android:textStyle="bold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputPersonNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Enter no of Pax"
            android:ems="10"
            android:hint="@string/paxHint"
            android:inputType="number" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="414dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="441dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/dateLabel"
                android:textSize="15sp" />

            <DatePicker
                android:id="@+id/DatePicker"
                android:layout_width="wrap_content"
                android:layout_height="181dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/timeLabel"
                android:textSize="15sp" />

            <TimePicker
                android:id="@+id/TimePicker"
                android:layout_width="wrap_content"
                android:layout_height="181dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:timePickerMode="spinner" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/areaOptions"
                android:textStyle="bold"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/smokingCb" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nonSmokingCb"
                android:textSize="15sp" />
        </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submitBtn" />

                <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resetBtn" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
